@startuml
title Lade Spiel... - Zustandsdiagramm
hide empty description

[*] --> EntryGeladen
state EntryGeladen : HTML Entry geladen: _ghtml_risk_finder_das_kleingedruckte.html
EntryGeladen --> RedirectVorbereiten : enginePath/configPath auslesen
RedirectVorbereiten --> RedirectAusfuehren : window.location.replace/assign
RedirectAusfuehren --> EngineLaden : Zielseite aufrufen
EngineLaden --> DatenLaden : Engine-/Config-Daten laden
DatenLaden --> SpielBereit : Initialisierung abgeschlossen
DatenLaden --> Fehler : Daten nicht ladbar
SpielBereit --> [*] : Steuerung an Ziel-Engine
Fehler --> [*]

note right of RedirectVorbereiten
Quelle: databases/Teil01 Grundlagen/database/BWL/Auswahl & Bewertung/Leasing/risk_finder_das_kleingedruckte/_ghtml_risk_finder_das_kleingedruckte.html
enginePath: ../../../../../../../game_pages/FindingGame/index.html
configPath: _data/_gg01_risk_finder_das_kleingedruckte.json
end note
@enduml
